--- a/docroot/sites/all/themes/hwc_frontend/less/content.less
+++ b/docroot/sites/all/themes/hwc_frontend/less/content.less
@@ -1073,7 +1073,8 @@ ul.tabs--primary.nav.nav-tabs{
 	.form-item-relevant-for,
 	.form-item-field-publication-type,
 	.form-item-field-priority-area,
-	.form-item-languages{
+	.form-item-languages,
+	.form-item-field-msd-priority-area{
 		margin-top: 0;
 		padding-top: 10px;
 		margin-bottom: 0px;
@@ -1091,7 +1092,8 @@ ul.tabs--primary.nav.nav-tabs{
 	.form-item-field-priority-area > label,
 	.form-item-relevant-for > label,
 	.form-item-languages > label,
-	.form-item-publication-type > label{
+	.form-item-publication-type > label,
+	.form-item-field-msd-priority-area > label{
 		font-size: 1.1em;
 		font-weight: bold;
 		width: 100%;
@@ -1111,7 +1113,8 @@ ul.tabs--primary.nav.nav-tabs{
 	.form-item-field-priority-area > label.active,
 	.form-item-relevant-for > label.active,
 	.form-item-languages > label.active,
-	.form-item-publication-type > label.active{
+	.form-item-publication-type > label.active,
+	.form-item-field-msd-priority-area > label.active{
 		&:after{
 			content: "\e252";
 			font-family: "Glyphicons Halflings";
