--- a/docroot/sites/all/themes/hwc_frontend/less/hwc20.less
+++ b/docroot/sites/all/themes/hwc_frontend/less/hwc20.less
@@ -175,7 +175,7 @@ select{
 	-webkit-appearance: none;
 	-moz-appearance: none;
 	appearance: none;
-	-webkit-appearance: button;
+	-webkit-appearance: none;
 }
 
 .main-container.container{
@@ -1904,7 +1904,7 @@ aside.col-md-3{
     padding: 0em 1em 0 1em;
     border: 1px solid #B0B2B3;
     border-radius: 5px;
-    margin-top: 26px;
+    margin-top: 0;
     width: 100%;
     background: #FFF;
 }
@@ -2412,7 +2412,7 @@ div.publications-detail-right-column > a.download{
   }
 }
 
-#edit-field-publication-type, #edit-main-tags {
+#edit-field-publication-type, #edit-main-tags, #edit-field-msd-priority-area{
 	> div > label{
 		font-size: 1.8rem;
   		color: #003399 !important;
@@ -2420,6 +2420,10 @@ div.publications-detail-right-column > a.download{
 	.form-checkboxes{
 		padding-top: 10px;
 	}
+}
+
+#edit-field-priority-area--2{
+	padding-top: 10px;
 }
 
 
@@ -2518,7 +2522,7 @@ html[lang=pt] #edit-search-api-views-fulltext{
 .page-publications, .page-events {
 	.sidebars_first{
 		border-top: 0;
-    	margin-top: 37px;
+    	margin-top: 63px;
     	margin-right: 0em;
 	}
 }
@@ -4739,7 +4743,7 @@ body{
 		border-radius: 7px;
 		padding: 1em 0 1em 1em;
 		float: right;
-		margin-top: 34px;
+		margin-top: 18px;
 		width: 288px;
 		margin-bottom: 3em;
 		> div > span{
@@ -5642,6 +5646,7 @@ body.press-room, body.european-week{
 			float: left;
 			margin-top: 1em;
     		padding-bottom: 1em;
+    		width: 100%;
 			
 			h2.block-title{
 				background: url(../images/events-h3-ico.png) -5px -3px no-repeat #ffffff;
@@ -5793,6 +5798,11 @@ body.european-week{
     	padding-top: 3em;
     	padding-bottom: 1em;
     	border-radius: 0;
+    	.view-frontpage-events{
+    		.more-link{
+    			background: transparent;
+    		}
+    	}
     }
 
 	#block-views-news-european-week{
@@ -7475,4 +7485,127 @@ body.page-tools-and-publications-publications{
 			}
 		}
 	}
+}
+
+
+/* Priority aread list - detail */
+
+.view-msd-priority-areas .view-content {
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: center;
+    .views-row{
+    		float: left;
+		    width: 23.7%;
+		    margin-right: 0.7em;
+		    margin-bottom: 3em;
+		.views-field-title{
+		    font-family: 'Open Sans', sans-serif;
+		    color: #003399;
+		    font-size: 1.1em !important;
+		    margin: 0;
+		    clear: both;
+		    line-height: 20px;
+		    padding: 10px;
+		    font-weight: bold;
+		    font-style: normal;
+		    padding-left: 0;
+		    letter-spacing: 0;
+		}
+	}
+}
+
+.node-type-priority-area{
+	.region-content{
+
+		.block-hwc-priority-areas{
+			background: #eceaea;
+			float: left;
+    		.field-name-title-field{
+    			div{
+    				div{
+    					color: #003399;
+    					font-size: 1.8rem;
+    					padding-bottom: 5px;
+    				}
+    			}
+    		}
+
+			ul{
+				list-style: none;
+				padding: 0 1em 1em 1em;
+				text-align: center;
+				li{
+					padding-top: 1em;
+					padding-bottom: 1em;
+					background: url(../images/green-line.png) repeat-x;
+				}
+			}
+			.more-link{
+				display: flex;
+			    flex-wrap: wrap;
+			    justify-content: center;
+			    background: transparent;
+				a{
+					margin-top: 0em;
+				    margin-bottom: 1em;
+				    margin-left: 1em;
+				}
+			}
+		}
+
+		#block-hwc-priority-areas{
+			background: #FFF;
+			margin-top: 2em;
+			
+			> div.field.field-name-field-pa-recommended-resources.field-type-entityreference.field-label-hidden > div > div:nth-child(1) > div > div.content{
+				background: none;
+			}
+
+			.node-news{
+				.content{
+					background: url(../images/green-line.png) repeat-x;
+					padding-top: 1em;
+				}
+
+				h2{
+					color: #003399;
+					font-size: 1.8rem;
+					padding-bottom: 5px;
+					font-weight: normal;
+					padding-bottom: 0;
+    				margin-bottom: 0;
+				}
+				.field.field-name-field-image{
+					width: auto;
+					min-height: 90px;
+				    margin-right: 0;
+				}
+				a.more-link{
+					justify-content: left;
+				}
+			}
+		}
+
+		h2.block-title{
+			float: left;
+	    	width: 100%;
+			background: url(../images/background-newsletter-300.png) no-repeat;
+			color: #FFF;
+			font-size: 2.5rem;
+		    padding: 0.5em;
+		    text-align: center;
+		}
+
+		.content{
+			margin-top: 0;
+		}
+
+		.previous-next.two-arrows{
+			margin-top: 3em;
+			float: left;
+			width: 100%;
+		}
+	}
+	
 }
