HW20-279 - About the topic - Left menu

--- a/docroot/sites/all/themes/hwc_frontend/css/hwc20-style.css
+++ b/docroot/sites/all/themes/hwc_frontend/css/hwc20-style.css
@@ -1391,11 +1391,29 @@ input[type="checkbox"]:checked + label .my-checkbox:after {
 aside.col-md-3 .region.region-sidebar-first.well {
   padding: 0;
 }
+aside.col-md-3 .region.region-sidebar-first.well h2.block-title {
+  font-size: 1.4rem;
+  padding: 10px 15px !important;
+  display: block;
+  margin-bottom: 15px;
+  border-radius: 3px;
+  text-decoration: none;
+  cursor: pointer;
+  color: white;
+  font-weight: bold;
+  background-color: #0030a0;
+  border-radius: 25px;
+  padding: 0.5em 0.5em;
+  margin-bottom: 0.5em;
+  padding-left: 1em;
+  padding-right: 30px;
+  position: relative;
+}
 .left-menu ul {
   list-style: none;
 }
 .left-menu ul li {
-  background-color: #daea96;
+  background-color: #ecf4cb;
   border-top-right-radius: 18px;
   border-bottom-right-radius: 18px;
   border-top-left-radius: 18px;
@@ -1432,6 +1450,83 @@ aside.col-md-3 .region.region-sidebar-first.well {
   position: absolute;
   right: 0;
   top: 10%;
+}
+.left-menu ul li.expanded {
+  background-color: transparent;
+  padding: 0;
+  margin-bottom: 0;
+}
+.left-menu ul li.expanded a {
+  background: #ecf4cb;
+  border-radius: 25px;
+  padding: 8px 23px;
+  color: #003399;
+  margin-bottom: 15px;
+}
+.left-menu ul li.expanded a:before {
+  content: "\e252";
+  font-family: "Glyphicons Halflings";
+  float: right;
+  vertical-align: middle;
+  color: #003399;
+  background-color: transparent;
+  top: 10px;
+  right: 13px;
+}
+.left-menu ul li.expanded a.active {
+  background: #daea96;
+}
+.left-menu ul li.expanded ul.menu li {
+  padding: 0;
+  background-color: transparent;
+}
+.left-menu ul li.expanded ul.menu li a {
+  width: 90%;
+  margin-left: 25px;
+  margin-bottom: 0;
+}
+.left-menu ul li.expanded ul.menu li a:before {
+  content: none;
+}
+.left-menu ul li.expanded.active a.active-trail {
+  background: #daea96;
+}
+.left-menu ul li.active ul li a:before {
+  content: none;
+}
+.left-menu ul li.active ul li.active a:before {
+  content: '';
+  width: 15px;
+  height: 15px;
+  border-radius: 10px;
+  background: #003399;
+  position: absolute;
+  right: 14px;
+  top: 10px;
+}
+.node-type-campaign-16 .left-menu ul li.expanded ul.menu li,
+.node-type-campaign-18 .left-menu ul li.expanded ul.menu li {
+  background-color: #ecf4cb;
+  border-top-right-radius: 18px;
+  border-bottom-right-radius: 18px;
+  border-top-left-radius: 18px;
+  border-bottom-left-radius: 18px;
+  padding: 0.5em 0.8em 0.5em 1.5em;
+  margin-bottom: 1em;
+  width: 100%;
+}
+.node-type-campaign-16 .left-menu ul li.expanded ul.menu li a,
+.node-type-campaign-18 .left-menu ul li.expanded ul.menu li a {
+  width: 100%;
+  margin-left: 0;
+}
+.node-type-campaign-16 .left-menu ul li.expanded.active a.active-trail,
+.node-type-campaign-18 .left-menu ul li.expanded.active a.active-trail {
+  background: transparent;
+}
+.node-type-campaign-16 .accordion-menu .menu-level-2 ul li ul li.active,
+.node-type-campaign-18 .accordion-menu .menu-level-2 ul li ul li.active {
+  background-color: #daea96;
 }
 #block-menu-block-5 ul a:before {
   content: none;
@@ -2706,10 +2801,9 @@ span.pages {
 }
 .page-search .views-exposed-widgets select {
   height: 35px;
-  -webkit-appearance: none;
   -moz-appearance: none;
   appearance: none;
-  -webkit-appearance: button;
+  -webkit-appearance: none;
   background: url(../images/green-select.png) no-repeat 94% 55% #ffffff;
   border-radius: 5px !important;
   width: 100%!important;
@@ -6586,6 +6680,43 @@ body.page-tools-and-publications-publications ol.multicarousel-indicators li.act
   margin-top: 3em;
   float: left;
   width: 100%;
+}
+/*Pratical tools*/
+body.page-tools-and-publications-practical-tools .region.region-content .view-content .views-row .views-field-body {
+  padding-bottom: 35px;
+}
+/* Glossary */
+.page-about-topic-glossary-list #glossary-letters {
+  float: left;
+  clear: both;
+  width: 100%;
+  border-top: 2px solid #bcd75b;
+  border-bottom: 2px solid #bcd75b;
+  padding: 1em;
+  margin-bottom: 2em;
+}
+.page-about-topic-glossary-list #glossary-letters span {
+  display: block;
+  float: left;
+  padding-right: 1em;
+}
+.page-about-topic-glossary-list .content-term .glossary_letter {
+  color: #003399;
+  font-size: 2rem;
+  font-weight: 900;
+}
+.page-about-topic-glossary-list .content-term .glossary_letter hr {
+  margin-top: -9px;
+  margin-bottom: 17px;
+  border: 0;
+  border-top: 1px solid #a7a6a6;
+  margin-left: 30px;
+}
+.page-about-topic-glossary-list .content-term .term-title {
+  color: #003399;
+}
+.page-about-topic-glossary-list .content-term .term-description {
+  padding-bottom: 1em;
 }
 .isMobile {
   float: right !important;
