HW20-305 - Development Good practice exchange page

--- a/docroot/sites/all/themes/hwc_frontend/css/hwc20-style.css
+++ b/docroot/sites/all/themes/hwc_frontend/css/hwc20-style.css
@@ -2558,6 +2558,9 @@ span.pages {
 .page-media-centre-news .footer {
   margin-top: 0;
 }
+body.good-practice-exchange .footer {
+  margin-top: 0;
+}
 .footer-section {
   font-size: 12.5px;
   min-height: 180px;
@@ -5334,7 +5337,7 @@ body.european-week #block-views-news-european-week ul > li:nth-child(2) {
 /* Styling Wysiwyg  */
 .float-img {
   float: left;
-  padding-right: 2em;
+  margin-right: 2em;
 }
 /* Styles for Release 2, This styles shouldn't be merge on release_1 branch */
 /* Private Zone */
@@ -6717,6 +6720,219 @@ body.page-tools-and-publications-practical-tools .region.region-content .view-co
 }
 .page-about-topic-glossary-list .content-term .term-description {
   padding-bottom: 1em;
+}
+/* Good Practice Exchange */
+#block-hwc-good-practice-exchange-gpe-news-events {
+  background: url(../images/background-fop.png) no-repeat;
+  background-size: cover;
+  padding: 2em;
+  float: left;
+  width: 100%;
+  display: flex;
+  flex-wrap: wrap;
+}
+#block-hwc-good-practice-exchange-gpe-news-events .box-before.news {
+  background: #FFF;
+  float: left;
+  padding: 1em;
+  width: 66%;
+  border-radius: 15px;
+  height: 100%;
+}
+#block-hwc-good-practice-exchange-gpe-news-events .box-before.news h3 {
+  position: relative;
+  color: #00309d;
+  margin-top: 0;
+  font-weight: 400;
+  background: url(../images/grey-h3-line.png) repeat-x 50% 82% #ffffff;
+  margin: 0;
+  padding: 19px 6px 0 11px;
+  border-top-left-radius: 7px;
+  border-top-right-radius: 7px;
+  font-size: 2.2em;
+}
+#block-hwc-good-practice-exchange-gpe-news-events .box-before.news h3:after {
+  width: 30px;
+  height: 15px;
+  content: ' ';
+  display: block;
+  position: absolute;
+  right: 0;
+  top: 32px;
+  background: #FFF;
+}
+#block-hwc-good-practice-exchange-gpe-news-events .box-before.news h3:before {
+  content: ' ';
+  background: url(../images/news-h3-ico.png) no-repeat #ffffff;
+  position: absolute;
+  top: 11px;
+  left: 28px;
+  width: 50px;
+  display: block;
+  height: 45px;
+  float: left;
+}
+#block-hwc-good-practice-exchange-gpe-news-events .box-before.news h3 span {
+  padding-left: 82px;
+  background: #FFF;
+  padding-right: 15px;
+  margin-left: -11px;
+}
+#block-hwc-good-practice-exchange-gpe-news-events .box-before.events {
+  background: #FFF;
+  float: left;
+  padding: 1em;
+  width: 31%;
+  border-radius: 15px;
+  margin-left: 2em;
+  height: 100%;
+}
+#block-hwc-good-practice-exchange-gpe-news-events .box-before.events h3 {
+  position: relative;
+  color: #00309d;
+  margin-top: 0;
+  font-weight: 400;
+  background: url(../images/grey-h3-line.png) repeat-x 50% 82% #ffffff;
+  margin: 0;
+  padding: 17px 6px 0 11px;
+  font-size: 2.2em;
+}
+#block-hwc-good-practice-exchange-gpe-news-events .box-before.events h3:before {
+  content: ' ';
+  background: url(../images/events-h3-ico.png) no-repeat #ffffff;
+  position: absolute;
+  top: 11px;
+  left: -8px;
+  width: 41px;
+  display: block;
+  height: 45px;
+  float: left;
+}
+#block-hwc-good-practice-exchange-gpe-news-events .box-before.events h3 span {
+  padding-left: 30px;
+  background: #FFF;
+  padding-right: 10px;
+}
+#block-hwc-good-practice-exchange-gpe-news-events .view-news {
+  background: #FFF;
+  border-bottom-left-radius: 7px;
+  border-bottom-right-radius: 7px;
+  padding: 2em 2em 4em 2em;
+}
+#block-hwc-good-practice-exchange-gpe-news-events .view-news .pull-left img {
+  border-radius: 10px;
+}
+#block-hwc-good-practice-exchange-gpe-news-events .view-news .date-display-single {
+  float: none;
+}
+#block-hwc-good-practice-exchange-gpe-news-events .view-news .media-body a,
+#block-hwc-good-practice-exchange-gpe-news-events .view-news .titlte-news-events a {
+  font-size: 1.4em;
+  font-style: normal;
+  padding-top: 0.5em;
+  display: block;
+}
+#block-hwc-good-practice-exchange-gpe-news-events .view-news .media-left,
+#block-hwc-good-practice-exchange-gpe-news-events .view-news .media > .pull-left {
+  padding-right: 25px;
+}
+#block-hwc-good-practice-exchange-gpe-news-events .view-news ul.media-list li.media {
+  border-bottom: 1px solid #ACC700;
+  padding-bottom: 2em;
+  padding-top: 1em;
+}
+#block-hwc-good-practice-exchange-gpe-news-events .view-news ul.media-list > li:nth-child(1) {
+  padding-top: 0;
+}
+#block-hwc-good-practice-exchange-gpe-news-events .view-news ul.media-list > li:nth-child(2) {
+  border-bottom: 0 solid #ACC700;
+}
+#block-hwc-good-practice-exchange-gpe-news-events .view-news ul.media-list > li:nth-child(2) .pull-left {
+  float: right !important;
+  padding-right: 0;
+  padding-left: 25px;
+}
+#block-hwc-good-practice-exchange-gpe-news-events .view-news .media-body {
+  height: 220px;
+  position: relative;
+}
+#block-hwc-good-practice-exchange-gpe-news-events .view-news .media-body p {
+  padding-top: 1em;
+}
+#block-hwc-good-practice-exchange-gpe-news-events .view-news .media-body a.more-link {
+  border: 1px solid #b0b1b3;
+  border-bottom: 1px solid #b0b1b3 !important;
+  border-radius: 3px;
+  color: #b0b1b3;
+  text-transform: uppercase;
+  padding: 2px 7px 2px 7px;
+  font-size: 12px;
+  font-weight: normal;
+  font-style: normal;
+  display: block;
+  float: left;
+  position: absolute;
+  bottom: 0;
+  margin-left: 0;
+  transition: 300ms;
+  background-position: 110%;
+  background-color: transparent;
+}
+#block-hwc-good-practice-exchange-gpe-news-events .view-news .media-body a.more-link:hover {
+  text-decoration: none;
+  color: #58595b;
+  border: 1px solid #58595b;
+  border-bottom: 1px solid #58595b !important;
+  border-top-left-radius: 3px;
+  border-bottom-left-radius: 3px;
+  border-top-right-radius: 15px;
+  border-bottom-right-radius: 15px;
+  background: url(../images/ico-plus-20-hover-plus.png) no-repeat 98% 0px;
+  padding-right: 2em;
+}
+#block-hwc-good-practice-exchange-gpe-news-events .view-news .media-body a.more-link:before {
+  content: '';
+  display: none;
+}
+#block-hwc-good-practice-exchange-gpe-news-events .view-news .more-link {
+  display: block;
+  clear: both;
+}
+#block-hwc-good-practice-exchange-gpe-news-events .view-frontpage-events .city,
+#block-hwc-good-practice-exchange-gpe-news-events .view-frontpage-events .country {
+  font-weight: bold;
+}
+#block-hwc-good-practice-exchange-gpe-news-events .view-frontpage-events .country {
+  float: left;
+}
+#block-hwc-good-practice-exchange-gpe-news-events .view-frontpage-events .country:after {
+  content: ', ';
+  padding-right: 3px;
+}
+#block-hwc-good-practice-exchange-gpe-news-events .view-frontpage-events .titlte-news-events a {
+  font-size: 1.1em;
+}
+#block-hwc-good-practice-exchange-gpe-news-events .view-frontpage-events .event_country {
+  margin-right: 1em;
+}
+#block-hwc-good-practice-exchange-gpe-news-events .view-frontpage-events .views-row {
+  height: 150px;
+  border-bottom: 1px solid #B0B1B2;
+  padding-bottom: 0;
+  padding-top: 1em;
+  padding-left: 0;
+}
+#block-hwc-good-practice-exchange-gpe-news-events .view-frontpage-events .views-row-last {
+  border-bottom: 0 solid #B0B1B2;
+}
+#block-hwc-good-practice-exchange-gpe-news-events .view-frontpage-events .date-display-single {
+  float: none;
+  width: 100%;
+  display: block;
+  font-size: 1.3rem !important;
+}
+#block-hwc-good-practice-exchange-gpe-news-events .view-frontpage-events .content-event {
+  padding-top: 8px;
 }
 .isMobile {
   float: right !important;
