--- a/docroot/sites/all/themes/hwc_frontend/less/hwc20-responsive-max-767.less
+++ b/docroot/sites/all/themes/hwc_frontend/less/hwc20-responsive-max-767.less
@@ -949,7 +949,7 @@
 	}
 
 	/* press room */
-	body.press-room, body.european-week{
+	body.press-room, body.european-week, body.good-practice-exchange{
 
 		.media-body{
 			height: auto;
@@ -968,6 +968,10 @@
 			width: 100%;
     		padding-left: 5px;
 		}
+	}
+
+	#block-hwc-good-practice-exchange-gpe-news-events .view-news .media-body{
+		height: auto;
 	}
 
 	body.press-room{
