--- a/docroot/sites/all/themes/hwc_frontend/less/hwc20-responsive-min-1200.less
+++ b/docroot/sites/all/themes/hwc_frontend/less/hwc20-responsive-min-1200.less
@@ -115,6 +115,18 @@
 		width: 100%;
 	}
 
+	#block-hwc-good-practice-exchange-gpe-news-events .box-before.news{
+		width: 100%;
+		height: auto;
+	}
+
+	#block-hwc-good-practice-exchange-gpe-news-events .box-before.events{
+		width: 100%;
+		height: auto;
+		margin-left: 0;
+		margin-top: 2em;
+	}
+
 	.page-publications, .page-tools-and-publications{
 		#content{
 			width: 98%!important;
